k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: team08registry.azurecr.io/order-service  # 태그 생략 (CI에서 set image로 교체됨)
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
