k8s/ocr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr-deployment
  labels:
    app: ocr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocr
  template:
    metadata:
      labels:
        app: ocr
    spec:
      containers:
        - name: ocr
          image: team08registry.azurecr.io/ocr-service
          ports:
            - containerPort: 8080  # QR html
            - containerPort: 3000  # 프록시
          volumeMounts:
            - name: certs
              mountPath: /app
      volumes:
        - name: certs
          secret:
            secretName: ocr-certificates
---
apiVersion: v1
kind: Service
metadata:
  name: ocr-service
spec:
  type: ClusterIP
  selector:
    app: ocr
  ports:
    - name: qr
      port: 8080
      targetPort: 8080
    - name: proxy
      port: 3000
      targetPort: 3000
