k8s/restaurant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-deployment
  labels:
    app: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
        - name: restaurant
          image: team08registry.azurecr.io/restaurant-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  type: ClusterIP
  selector:
    app: restaurant
  ports:
    - port: 80
      targetPort: 8080
