k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # HTTP → HTTPS 리디렉션
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5173"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - team08.kro.kr
      secretName: team08-kro-kr-tls

  rules:
    - host: team08.kro.kr
      http:
        paths:
          - path: /producer
            pathType: Prefix
            backend:
              service:
                name: producer-service
                port:
                  number: 80
          - path: /consumer
            pathType: Prefix
            backend:
              service:
                name: consumer-service
                port:
                  number: 80
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 80
          - path: /ocr
            pathType: Prefix
            backend:
              service:
                name: ocr-service
                port:
                  number: 80
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: ocr-service
                port:
                  number: 80
